--- a/react-3d-model/package.json
+++ b/react-3d-model/package.json
@@ -13,8 +13,10 @@
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
-    "three": "^0.175.0"
+    "three": "^0.175.0",
+    "valtio": "^2.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
